final changes to paper before submission

--- a/EMNLP2014/bibliography.bib
+++ b/EMNLP2014/bibliography.bib
@@ -463,6 +463,22 @@ year = {2003}
   pages     = {35-75},
 }
 
+@article{Marino2006,
+ author = {Mari\~{n}o, Jos{\'e} B. and Banchs, Rafael E. and Crego, Josep M. and de Gispert, Adri\`{a} and Lambert, Patrik and Fonollosa, Jos{\'e} A. R. and Costa-juss\`{a}, Marta R.},
+ title = {N-gram-based Machine Translation},
+ journal = {Comput. Linguist.},
+ issue_date = {December 2006},
+ volume = {32},
+ number = {4},
+ month = dec,
+ year = {2006},
+ issn = {0891-2017},
+ pages = {527--549},
+ numpages = {23},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
 @article{Chiang2007,
  author = {Chiang, David},
  title = {Hierarchical Phrase-Based Translation},
@@ -535,6 +551,17 @@ year = {2003}
   year={2010},
 }
 
+@InProceedings{Durrani2011,
+  author    = {Durrani, Nadir  and  Schmid, Helmut  and  Fraser, Alexander},
+  title     = {A Joint Sequence Translation Model with Integrated Reordering},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1045--1054},
+}
+
 @InProceedings{Vaswani2011,
   author    = {Vaswani, Ashish  and  Mi, Haitao  and  Huang, Liang  and  Chiang, David},
   title     = {Rule Markov Models for Fast Tree-to-String Translation},
@@ -555,6 +582,18 @@ year = {2003}
   address   = {Sofia, Bulgaria},
   publisher = {Association for Computational Linguistics},
   pages     = {1--44},
+}
+
+@InProceedings{Feng2013,
+  author    = {Feng, Yang  and  Cohn, Trevor},
+  title     = {A Markov Model of Machine Translation using Non-parametric Bayesian Inference},
+  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {August},
+  year      = {2013},
+  address   = {Sofia, Bulgaria},
+  publisher = {Association for Computational Linguistics},
+  pages     = {333--342},
+  url       = {http://www.aclweb.org/anthology/P13-1033}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%
