--- a/EMNLP2014/emnlp2014.tex
+++ b/EMNLP2014/emnlp2014.tex
@@ -467,7 +467,7 @@ $\,$
 	\label{fig:estimation-algos}
 \end{figure*}
 
-\subsection{Estimation with Spectral Moments}
+\subsection{Estimation with Spectral Method}
 \label{sec:spectral} 
 We generalize the parameter estimation algorithm presented in \newcite{Cohen2013} to the synchronous or bilingual case. 
 The central concept of the spectral parameter estimation algorithm is to learn an $m$-dimensional representation of inside and outside trees by defining these trees in terms of features, in combination with a projection step (SVD), with the hope being that the lower-dimensional space captures the syntactic and semantic regularities among rules from the sparse feature space. 
